--- a/student_management_system/.env
+++ b/student_management_system/.env
@@ -3,8 +3,8 @@ DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
 ALLOW_ALL_ORIGINS=True
 DATABASE_ENGINE=django.db.backends.postgresql
-DATABASE_NAME=mulvjixz
-DATABASE_USER=mulvjixz
-DATABASE_PASSWORD=zhqK5DK7n6rELDdrEWtfpWPbQSKpim2m
-DATABASE_HOST=rosie.db.elephantsql.com
+DATABASE_NAME=eufecbgo
+DATABASE_USER=eufecbgo
+DATABASE_PASSWORD=eCs4uBg24mtGI_LAn5Zt4WOIqmqr98lO
+DATABASE_HOST=castor.db.elephantsql.com
 DATABASE_PORT=5432
