--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ PyJWT = "^2.3.0"
 whitenoise = "^5.3.0"
 
 [tool.poetry.dev-dependencies]
+autopep8 = "^1.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
